--- a/src/app/chat/presentation/pages/chat/chat.component.html
+++ b/src/app/chat/presentation/pages/chat/chat.component.html
@@ -1,29 +1,37 @@
 <div class="flex h-full">
   <div class="w-1/3 h-full">
-    <chat-list [(chats)]="chats" [selectedChat]="selectedChat()" (onSelectChat)="onSelectChat($event)"/> 
+    <chat-list
+      [chats]="chats()"
+      [selectedChat]="currentChat()"
+      (onSelectChat)="selectChat($event)"
+      [(searchTerm)]="searchTerm"
+    />
   </div>
   <div class="w-2/3 h-full">
-    @if(selectedChat()){
-      <!-- <chat-window [chat]="currentChat()!" (chatChange)="setChat($event)" [(chatIndex)]="chatIndex" (onSendMessage)="startChat($event)"/> -->
-      <chat-window [chat]="selectedChat()!" [(chatIndex)]="chatIndex" />
+    @if(currentChat()){
+      <chat-window
+        [chat]="currentChat()!"
+        [(chatIndex)]="paginatorIndex"
+        (onSendMessage)="setNewChat($event)"
+      />
     } 
     @else {
-      <div class="flex flex-col items-center justify-center h-full text-center">
-        <div class="max-w-md mx-auto">
-          <img
-            src="images/icons/chat-bubbles.png"
-            class="w-24 h-24 mb-6 mx-auto"
-            alt="Chat icon"
-          />
+    <div class="flex flex-col items-center justify-center h-full text-center">
+      <div class="max-w-md mx-auto">
+        <img
+          src="images/icons/chat-bubbles.png"
+          class="w-24 h-24 mb-6 mx-auto"
+          alt="Chat icon"
+        />
 
-          <h1 class="text-2xl font-semibold mb-2">Seleccione una conversación</h1>
+        <h1 class="text-2xl font-semibold mb-2">Seleccione una conversación</h1>
 
-          <p class="text-sm">
-            Inicie una nueva conversación o seleccione una de las existentes
-            para empezar a chatear.
-          </p>
-        </div>
+        <p class="text-sm">
+          Inicie una nueva conversación o seleccione una de las existentes para
+          empezar a chatear.
+        </p>
       </div>
+    </div>
     }
   </div>
 </div>
