--- a/src/app/chat/presentation/components/chat-window/chat-window.component.html
+++ b/src/app/chat/presentation/components/chat-window/chat-window.component.html
@@ -27,10 +27,10 @@
     #chatPanel
   >
     @if(isLoading()){
-      <div class="text-center">Cargando mensajes...</div>
+      <div class="text-center py-2">Cargando mensajes...</div>
     }
     @if(!isLoading() && messages().length === 0){
-      <div class="text-center py-4">
+      <div class="text-center py-2">
         Escriba un mensaje para iniciar la conversacion.
       </div>
     } 
@@ -39,24 +39,22 @@
     }
   </div>
   @if(!isAtBottom()){
-  <button
-    matMiniFab
-    class="!fixed bottom-24 right-6"
-    (click)="scrollToBottom()"
-  >
-    <mat-icon>arrow_downward</mat-icon>
-  </button>
-  } @if(newMessagesCount() > 0 && !isAtBottom()){
-  <div
-    style="background-color: var(--mat-sys-secondary-container)"
-    class="absolute bottom-[100px] left-1/2 -translate-x-1/2 text-sm font-medium px-4 py-2 rounded-full cursor-pointer"
-    (click)="scrollToBottom()"
-  >
-    {{ newMessagesCount() }} nuevo{{
-      newMessagesCount() > 1 ? "s" : ""
-    }}
-    mensaje{{ newMessagesCount() > 1 ? "s" : "" }}
-  </div>
+    <button
+      matMiniFab
+      class="!fixed bottom-24 right-6"
+      (click)="scrollToBottom()"
+    >
+      <mat-icon>arrow_downward</mat-icon>
+    </button>
+  }
+  @if(newMessagesCount() > 0 && !isAtBottom()){
+    <div
+      style="background-color: var(--mat-sys-secondary-container)"
+      class="absolute bottom-[100px] left-1/2 -translate-x-1/2 text-sm font-medium px-4 py-2 rounded-full cursor-pointer"
+      (click)="scrollToBottom()"
+    >
+       {{ newMessagesCount() + (newMessagesCount() > 1 ?  " nuevos mensajes" : " nuevo mensaje")}}
+    </div>
   }
   <div
     class="flex items-center gap-4 p-4 w-full"
