--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -8,7 +8,8 @@
     </div>
     <span class="flex-1"></span>
     <div class="flex gap-x-3">
-      <button mat-icon-button matTooltip="Chat" routerLink="/home/chat">
+      <button mat-icon-button (click)="navigateToChat()" matTooltip="Chat"
+          [matBadge]="unreadMessagesCount() " matBadgeColor="warn" matBadgeHidden="{{ unreadMessagesCount() === 0 }}">
         <mat-icon>chat</mat-icon>
       </button>
 
