correcion chat service

--- a/src/app/chat/presentation/components/chat-window/chat-window.component.html
+++ b/src/app/chat/presentation/components/chat-window/chat-window.component.html
@@ -33,7 +33,7 @@
         Escriba un mensaje para iniciar la conversacion.
       </div>
     } 
-    @for (item of messages(); track $index) {
+    @for (item of messages(); track item.id) {
       <chat-bubble [message]="item" />
     }
   </div>
