--- a/src/app/reports/presentation/pages/report-segments/report-segments.component.html
+++ b/src/app/reports/presentation/pages/report-segments/report-segments.component.html
@@ -1,118 +1,144 @@
-    <div class="container mx-auto p-4">
-      <h1 class="text-2xl font-medium mb-6">Reporte: Total por Segmentos</h1>
-      <form [formGroup]="filterForm" (ngSubmit)="getData()" class="mb-4 p-4">
-        <div class="flex flex-col sm:flex-row gap-x-4 gap-y-4">
-          <div class="w-full sm:w-1/3">
-            <select-search
-              title="Institucion"
-              [items]="institutions()"
-              (onSelect)="selectInstitution($event)"
+<div class="p-4">
+  <form [formGroup]="filterForm" (ngSubmit)="getData()" class="mb-4 p-4">
+    <div class="flex flex-col sm:flex-row gap-x-4 gap-y-4">
+      <div class="w-full sm:w-1/3">
+        <select-search
+          title="Institucion"
+          [items]="institutions()"
+          (onSelect)="selectInstitution($event)"
+        />
+      </div>
+      <div class="w-full sm:w-1/3">
+        <mat-form-field appearance="outline" class="w-full">
+          <mat-label>Grupo de Trámite</mat-label>
+          <mat-select formControlName="group">
+            @for (group of PROCEDURE_GROUP; track $index) {
+            <mat-option [value]="group.value">{{ group.label }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="w-full sm:w-1/3">
+        <mat-form-field appearance="outline" class="w-full">
+          <mat-label>Ingrese un rango de fechas</mat-label>
+          <mat-date-range-input [rangePicker]="picker" [max]="CURRENT_DATE">
+            <input
+              matStartDate
+              placeholder="Fecha inicio"
+              formControlName="startDate"
             />
-          </div>
-          <div class="w-full sm:w-1/3">
-            <mat-form-field appearance="outline" class="w-full">
-              <mat-label>Grupo de Trámite</mat-label>
-              <mat-select formControlName="group">
-                @for (group of PROCEDURE_GROUP; track $index) {
-                <mat-option [value]="group.value">{{ group.label }}</mat-option>
-                }
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div class="w-full sm:w-1/3">
-            <mat-form-field appearance="outline" class="w-full">
-              <mat-label>Ingrese un rango de fechas</mat-label>
-              <mat-date-range-input [rangePicker]="picker" [max]="CURRENT_DATE">
-                <input
-                  matStartDate
-                  placeholder="Fecha inicio"
-                  formControlName="startDate"
-                />
-                <input
-                  matEndDate
-                  placeholder="Fecha fin"
-                  formControlName="endDate"
-                />
-              </mat-date-range-input>
-              <mat-datepicker-toggle
-                matIconSuffix
-                [for]="picker"
-              ></mat-datepicker-toggle>
-              <mat-date-range-picker #picker></mat-date-range-picker>
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="mt-2 text-right">
-          <button
-          type="submit"
-            matButton="filled"
-            [disabled]="filterForm.invalid || isLoading()"
-          >
-            Generar
-          </button>
-        </div>
-      </form>
-
-      @if(isLoading()){
-        <div class="flex flex-col gap-y-1 mt-4">
-          <p class="text-xl">Generando reporte....</p>
-          <mat-progress-bar mode="indeterminate" />
-        </div>
-      } 
-      
-      @if(!isLoading() && results()?.segments?.length === 0){
-        <div class="text-center p-8 text-lg">
-          No se encontraron datos para los filtros seleccionados.
-        </div>
-      }   
-      @if(!isLoading() && (results()?.segments?.length ?? 0) > 0){
-        <div class="mx-auto w-full sm:w-[500px] mb-6">
-          <generic-chart
-            title="Porcentaje Total de Trámites"
-            chartType="pie"
-            [chartData]="pieChartData()"
-          />
-        </div>
-        <div class="overflow-x-auto">
-          <table class="min-w-full divide-y-2 divide-gray-200">
-            <thead>
-              <tr>
-                <th class="px-3 py-2 whitespace-nowrap text-start">SEGMENTO</th>
-                <th class="px-3 py-2 whitespace-nowrap text-start">PENDIENTES</th>
-                <th class="px-3 py-2 whitespace-nowrap text-start">
-                  FINALIZADOS
-                </th>
-                <th class="px-3 py-2 whitespace-nowrap text-start">TOTAL</th>
-              </tr>
-            </thead>
-
-            <tbody class="divide-y divide-gray-200">
-              @for (item of results()?.segments; track $index) {
-              <tr class="*:text-gray-900 *:first:font-medium">
-                <td class="px-3 py-2 whitespace-nowrap">{{ item.prefix }}</td>
-                <td class="px-3 py-2 whitespace-nowrap">
-                  {{ item.totals.pending }}
-                </td>
-                <td class="px-3 py-2 whitespace-nowrap">
-                  {{ item.totals.completed }}
-                </td>
-                <td class="px-3 py-2 whitespace-nowrap">{{ item.total }}</td>
-              </tr>
-              }
-            </tbody>
-            <tfoot>
-              <tr class="*:font-semibold *:px-3 *:py-2 *:text-gray-800">
-                <td class="text-left">TOTAL:</td>
-                <td class="text-left">
-                  {{ results()?.globalTotals?.totalPending }}
-                </td>
-                <td class="text-left">
-                  {{ results()?.globalTotals?.totalCompleted }}
-                </td>
-                <td>{{ results()?.globalTotals?.total }}</td>
-              </tr>
-            </tfoot>
-          </table>
-        </div>
-      }
+            <input
+              matEndDate
+              placeholder="Fecha fin"
+              formControlName="endDate"
+            />
+          </mat-date-range-input>
+          <mat-datepicker-toggle
+            matIconSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
+        </mat-form-field>
+      </div>
     </div>
+    <div class="mt-2 text-right">
+      <button
+      type="submit"
+        matButton="filled"
+        [disabled]="filterForm.invalid || isLoading()"
+      >
+        Generar
+      </button>
+    </div>
+  </form>
+
+  @if(isLoading()){
+    <div class="flex flex-col gap-y-1 mt-4">
+      <p class="text-xl">Generando reporte....</p>
+      <mat-progress-bar mode="indeterminate" />
+    </div>
+  } 
+  
+  @if(!isLoading() && results()?.segments?.length === 0){
+    <div class="text-center p-8 text-lg">
+      No se encontraron datos para los filtros seleccionados.
+    </div>
+  }   
+  @if(!isLoading() && (results()?.segments?.length ?? 0) > 0){
+    <div class="mx-auto w-full sm:w-[500px] mb-6">
+      <generic-chart
+        title="Porcentaje Total de Trámites"
+        chartType="pie"
+        [chartData]="pieChartData()"
+      />
+    </div>
+    <div class="overflow-x-auto">
+      <table class="min-w-full divide-y-2 divide-gray-200 text-sm">
+        <colgroup>
+          <col>
+          <col class="bg-[#FDFFB6]">
+          <col class="bg-[#FDFFB6]">
+          <col class="bg-[#FDFFB6]">
+          <col class="bg-[#CAFFBF]"> 
+          <col class="bg-[#CAFFBF]"> 
+          <col class="bg-[#CAFFBF]"> 
+          <col class="bg-[#CAFFBF]"> 
+          <col class="bg-[#CAFFBF]"> 
+          <col class="bg-[#FFD166]"> 
+          <col class="bg-[#06D6A0]"> 
+          <col> 
+        </colgroup>
+        <thead>
+          <tr>
+            <th class="px-3 py-2 whitespace-nowrap text-start">Segmento</th>
+            @for (state of PROCEDURE_STATUS_LIST; track $index) {
+              <th class="px-3 py-2 whitespace-nowrap text-start text-black">{{state.label}}</th>
+            }
+            <th class="px-3 py-2 whitespace-nowrap text-start text-black">Pendientes</th>
+            <th class="px-3 py-2 whitespace-nowrap text-start text-black">
+              Archivados
+            </th>
+            <th class="px-3 py-2 whitespace-nowrap text-start">Total</th>
+          </tr>
+        </thead>
+
+        <tbody class="divide-y divide-gray-200">
+          @for (item of results()?.segments; track $index) {
+            <tr class="*:first:font-medium">
+              <td class="px-3 py-2 whitespace-nowrap">{{ item.prefix }}</td>
+              @for (state of PROCEDURE_STATUS_LIST; track $index) {
+                <td class="px-3 py-2 whitespace-nowrap text-black">
+                  {{getCountState(state.value, item.breakdown)}}
+                </td>
+              }
+              <td class="px-3 py-2 whitespace-nowrap font-bold text-black">
+                {{ item.totals.pending }}
+              </td>
+              <td class="px-3 py-2 whitespace-nowrap font-bold text-black">
+                {{ item.totals.completed }}
+              </td>
+              <td class="px-3 py-2 whitespace-nowrap font-bold">{{ item.total }}</td>
+            </tr>
+          }
+        </tbody>
+        <tfoot>
+          <tr class="*:font-semibold *:px-3 *:py-2">
+            <td class="text-left">TOTAL:</td>
+              @for (state of PROCEDURE_STATUS_LIST; track $index) {
+                <td class="text-left text-black">
+                  {{ getTotalByState(state.value) }}
+                </td>
+              }
+            <td class="text-left text-black">
+              {{ results()?.globalTotals?.totalPending }}
+            </td>
+            <td class="text-left text-black">
+              {{ results()?.globalTotals?.totalCompleted }}
+            </td>
+            <td>{{ results()?.globalTotals?.total }}</td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  }
+</div>
