--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -156,6 +156,10 @@
             <mat-icon>description</mat-icon>
             <span>Hoja de ruta</span>
           </button>
+          <button mat-menu-item (click)="startChat(item)">
+              <mat-icon>chat</mat-icon>
+              <span>Iniciar conversación</span>
+          </button>
         </mat-menu>
       </td>
     </ng-container>
