--- a/src/app/communications/presentation/dialogs/submission-dialog/submission-dialog.component.html
+++ b/src/app/communications/presentation/dialogs/submission-dialog/submission-dialog.component.html
@@ -72,7 +72,7 @@
                       src="images/icons/account.png"
                     />
                     <span
-                      class="absolute bottom-0 right-0 w-2 h-2 rounded-full border border-white"
+                      class="absolute bottom-0 right-0 w-3 h-3 rounded-full border"
                       [ngClass]="{
                         'bg-green-500': user.online,
                         'bg-gray-400': !user.online
