--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -1,4 +1,9 @@
 <div class="example-container" [class.example-is-mobile]="isMobile()">
+  <div class="border-b border-gray-200 bg-blue-400 px-4 py-2 text-white">
+    <p class="text-center font-semibold">
+      Entorno de Pruebas – Uso exclusivo para validación
+    </p>
+  </div>
   <mat-toolbar class="example-toolbar">
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
