--- a/src/app/communications/presentation/pages/archives/archives.component.html
+++ b/src/app/communications/presentation/pages/archives/archives.component.html
@@ -4,10 +4,89 @@
   </button>
   <span class="ml-2">Contenido</span>
   <span class="flex-1"></span>
+  <button
+    mat-icon-button
+    aria-label="Filter"
+    cdkOverlayOrigin
+    #menuOverlay="cdkOverlayOrigin"
+    matTooltip="Filtrar"
+    (click)="isOpen = !isOpen"
+  >
+    <mat-icon>filter_alt</mat-icon>
+  </button>
 </mat-toolbar>
 
+<ng-template
+  cdkConnectedOverlay
+  [cdkConnectedOverlayOrigin]="menuOverlay"
+  [cdkConnectedOverlayOpen]="isOpen"
+>
+  <div class="overlay p-3 sm:w-[650px]">
+    <div class="flex items-center justify-between px-2 mb-4">
+      <div class="flex flex-col">
+        <span class="text-lg font-medium">Filtro avanzado</span>
+        <span class="text-sm">Ingrese los campos</span>
+      </div>
+      <div>
+        <button mat-icon-button (click)="isOpen = false">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
+    </div>
+    <select-search
+      title="Filtrar por funcionario"
+      [nullable]="true"
+      (onSelect)="selectAccount($event)"
+      [value]="filterForm.get('accountId')?.value"
+      [items]="accountInDependency()"
+    />
+    <form [formGroup]="filterForm">
+      <div class="flex flex-col">
+        <mat-form-field appearance="outline">
+          <mat-label>Seleccione un rango</mat-label>
+          <mat-date-range-input [rangePicker]="picker" [max]="CURRENT_DATE">
+            <input
+              matStartDate
+              placeholder="Fecha inicio"
+              formControlName="startDate"
+            />
+            <input
+              matEndDate
+              placeholder="Fecha fin"
+              formControlName="endDate"
+            />
+          </mat-date-range-input>
+          <mat-datepicker-toggle
+            matIconSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
+        </mat-form-field>
+      </div>
+    </form>
+
+    <div class="flex justify-end gap-x-2 mt-2">
+      <button mat-button (click)="reset()">Restablecer</button>
+      <button mat-flat-button [disabled]="filterForm.invalid" (click)="applyFilter()">Buscar</button>
+    </div>
+  </div>
+</ng-template>
+
 <div class="p-2 sm:p-4">
-  <div class="flex justify-end mb-2">
+  <div class="flex justify-between items-center mb-2">
+    <button matButton="tonal" (click)="exportData()" [disabled]="!isFiltered()">
+      @if(isExporting()){
+      <div class="flex items-center gap-x-4">
+        <mat-spinner [diameter]="20" />
+        Generando
+      </div>
+      } @else {
+      <div class="flex items-center gap-x-2">
+        <mat-icon>printer</mat-icon>
+        Inprimir
+      </div>
+      }
+    </button>
     <div class="w-full sm:w-1/4 h-[54px]">
       <search-input
         [initValue]="term()"
@@ -32,7 +111,7 @@
             }
             <div>
               {{ item.groupLabel }}
-            </div> 
+            </div>
           </div>
         </td>
       </ng-container>
@@ -63,7 +142,7 @@
         </td>
       </ng-container>
 
-       <ng-container matColumnDef="date">
+      <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Fecha</th>
         <td mat-cell *matCellDef="let item" class="w-36">
           {{ item.createdAt | date : "short" }}
@@ -157,14 +236,13 @@
         <td class="mat-cell p-3" colspan="8">Sin resultados</td>
       </tr>
     </table>
-    @if (datasize() > limit()) {
     <mat-paginator
       showFirstLastButtons
       [length]="datasize()"
       [pageIndex]="index()"
-      [pageSize]="10"
+      [pageSize]="limit()"
+      [pageSizeOptions]="[10, 20, 30, 50]"
       (page)="onPageChange($event)"
     />
-    }
   </div>
 </div>
